--- a/style.css
+++ b/style.css
@@ -1,84 +1,92 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Jul 4, 2017, 11:41:22 AM
-    Author     : MEia
-*/
+/*font-family: 'Raleway', sans-serif;*/
+/*font-family: 'Roboto Condensed', sans-serif;*/
+/*font-family: 'Montserrat', sans-serif;*/
+/*font-family: 'Abel', sans-serif;*/
+/*font-family: 'Dancing Script', cursive;*/
 
-body{
-    font-family: 'Courier New';
-    font-weight: bold;
+* {
+  box-sizing: border-box;
 }
 
-form{
-    width: 500px;
-    height: 30px;
+body {
+  max-width: 600px;
+  margin: auto;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-.matrix{
-    font-size: 40px;
+input {
+  border: 2px solid lightgreen;
+  height: 50px;
+  width: 200px;
+  font-family: inherit;
+  font-size: 1.4em;
+  padding: 0;
+  margin: 20px 0;
 }
 
-#panel{
-    width: 200px;
-    height: 200px;
-    border-radius: 2px;
-    border: 8px solid #14c4fa;
-    float: left;
-    margin-bottom: 10px;
-    box-shadow: 2px 2px 2px #000;
-}
-.letter{
-    width: 46px;
-    height: 46px;
-    margin: 1px;
-    border: 1px solid #000;
-    background-color: #ffffcc;
-    float: left;
-    line-height: 50px;
-    font-size: 25px;
-    text-align: center;
-}
-.newdiv{
-    width: 180px;
-    height: 40px;
-    background-color: #fff;
-    float: left;
-    line-height: 40px;
-    font-size: 20px;
-    text-align: left;
+button {
+  background-color: lightgreen;
+  border: 2px solid lightgreen;
+  vertical-align: top;
+  padding: 0;
+  cursor: pointer;
+  height: 50px;
+  width: 100px;
+  font-family: inherit;
+  margin: 20px 0;
+  font-size: 1.7em;
 }
 
-#result{
-    width: 200px;
-    background-color: #fff;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 10px;
-    height: 216px;
-    overflow-y: scroll;
-    float: left;
+button:hover {
+  background-color: rgb(189, 218, 189);
 }
 
-.controls{
-    width: 80px;
-    height: 25px;
-    line-height: 25px;
-    margin: 10px;
-    background-color: #14c4fa;
-    text-align: center;
-    cursor: pointer;
-    border: 1px solid #000;
-    box-shadow: 2px 2px 2px #000;
-}
-#previous{
-    clear: both;
-    float: left;
+button:focus {
+  outline: none;
 }
 
-#stop,#next,#reset{
-    float: left;
+.listOfWords {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  border: 3px solid lightgreen;
+  padding: 20px;
+  max-height: 150px;
+  overflow-y: scroll;
+}
+
+.listOfWords li {
+  font-size: 20px;
+  padding: 5px 8px;
+  border: 1px solid darkgrey;
+  margin: 2px;
+  cursor: pointer;
+}
+
+.listOfWords li:hover {
+  background-color: #e1e1e1;
+}
+
+.board {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  border: 3px solid lightgreen;
+  justify-content: center;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.boardLi {
+  width: 120px;
+  height: 120px;
+  line-height: 120px;
+  text-align: center;
+  font-size: 4em;
+  margin: 5px;
+  border: 3px solid lightgreen;
 }
